package com.openclassrooms.realestatemanager.data.model;

public enum PropertyStatus {
    AVAILABLE,
    SOLD
}
