@startuml
'https://plantuml.com/class-diagram

left to right direction

class Property {
String property_type
Double price
int surface
int rooms_count
String description
String address
Property_status status
Date market_entry
Date sold
String agent
}

enum Property_status {
AVAILABLE
SOLD
}

class Media {
String uri
}

class Place {
String name
LatLng position
String address
String place_type
}

class Property_place {
}

Property "1" -- "0..*" Media

Property "1..*" -- "0..*" Place
(Property, Place) .. Property_place

@enduml